// Vitest Snapshot v1

exports[`code tabs > shoud render mutiple block 1`] = `
"<CodeTabs :data='[{\\"title\\":\\"js\\"},{\\"title\\":\\"ts\\"}]'>

<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
<template #tab1=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-ts\\">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > shoud render mutiple block 2`] = `
"<CodeTabs :data='[{\\"title\\":\\"js\\"},{\\"title\\":\\"ts\\"}]'>

<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
<template #tab1=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-ts\\">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > shoud render single block 1`] = `
"<CodeTabs :data='[{\\"title\\":\\"js\\"}]'>

<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > shoud render single block 2`] = `
"<CodeTabs :data='[{\\"title\\":\\"js\\"}]'>

<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > shoud support active 1`] = `
"<CodeTabs :data='[{\\"title\\":\\"js\\"}]' :active=\\"0\\">

<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > shoud support active 2`] = `
"<CodeTabs :data='[{\\"title\\":\\"js\\"}]' :active=\\"0\\">

<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > shoud support active 3`] = `
"<CodeTabs :data='[{\\"title\\":\\"js\\"},{\\"title\\":\\"ts\\"}]' :active=\\"1\\">

<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
<template #tab1=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-ts\\">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > shoud support active 4`] = `
"<CodeTabs :data='[{\\"title\\":\\"js\\"},{\\"title\\":\\"ts\\"}]' :active=\\"1\\">

<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
<template #tab1=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-ts\\">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > shoud support id 1`] = `
"<CodeTabs :data='[{\\"title\\":\\"js\\"}]' tab-id=\\"event\\">

<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > shoud support id 2`] = `
"<CodeTabs :data='[{\\"title\\":\\"js\\"}]' tab-id=\\"event-id\\">

<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > shoud support id 3`] = `
"<CodeTabs :data='[{\\"title\\":\\"js\\"}]' tab-id=\\"id with space\\">

<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > shoud support id 4`] = `
"<CodeTabs :data='[{\\"title\\":\\"js\\"}]' tab-id=\\"id starts and having space in the end\\">

<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > shoud support value 1`] = `
"<CodeTabs :data='[{\\"title\\":\\"js\\",\\"value\\":\\"javascript\\"}]'>

<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > shoud support value 2`] = `
"<CodeTabs :data='[{\\"title\\":\\"js\\",\\"value\\":\\"javascript\\"}]' :active=\\"0\\">

<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > shoud support value 3`] = `
"<CodeTabs :data='[{\\"title\\":\\"js\\",\\"value\\":\\"js\\"},{\\"title\\":\\"ts\\",\\"value\\":\\"typescript\\"}]' :active=\\"1\\">

<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
<template #tab1=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-ts\\">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > shoud support value 4`] = `
"<CodeTabs :data='[{\\"title\\":\\"js\\",\\"value\\":\\"javascript\\"},{\\"title\\":\\"ts\\",\\"value\\":\\"typescript\\"}]' :active=\\"1\\">

<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
<template #tab1=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-ts\\">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > should ignore other items 1`] = `
"<CodeTabs :data='[{\\"title\\":\\"js\\"}]' :active=\\"0\\">

<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > should ignore other items 2`] = `
"<CodeTabs :data='[{\\"title\\":\\"js\\"}]' :active=\\"0\\">

<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > should ignore other items 3`] = `
"<CodeTabs :data='[{\\"title\\":\\"js\\"},{\\"title\\":\\"ts\\"}]' :active=\\"1\\">

<template #tab0=\\"{ title, value, isActive }\\"><pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
<template #tab1=\\"{ title, value, isActive }\\"><pre><code class=\\"language-ts\\">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;

exports[`code tabs > should ignore other items 4`] = `
"<CodeTabs :data='[{\\"title\\":\\"js\\"},{\\"title\\":\\"ts\\"}]' :active=\\"1\\">

<template #tab0=\\"{ title, value, isActive }\\"><pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
<template #tab1=\\"{ title, value, isActive }\\"><pre><code class=\\"language-ts\\">const a = 1;
</code></pre>
</template>
</CodeTabs>
"
`;
